STEP-3 fix main icon and overflow

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,7 @@
+body {
+  overflow: hidden;
+}
+
 :host {
   display: flex;
   width: 100vw;
@@ -28,16 +32,18 @@
   font-size: 1.75vw;
   text-transform: uppercase;
   margin-top: 5vw;
+  cursor: copy;
 }
 
 .self__btn {
   padding: .8vw 5vw;
   border: none;
-  border-radius: 8px;
+  border-radius: .8vw;
   color: white;
   background-color: #2100b5;
   font-size: 1vw;
   cursor: pointer;
+
   &:hover {
     opacity: 0.8;
   }
